--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,7 @@
             </div>
             
             <div id="sign-up">
-                <p>Don't have an account? <a href="#">Sign up for free</a></p>
+                <p>Don't have an account? <a href="#">Sign up for free <img src="Images/underline.png" id="underline"></a></p>
             </div>
 
         </div>
